--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^3.0.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
+    "react-drag-and-drop": "3.0.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react-transition-group": "^4.4.5",
-    "web-vitals": "^2.1.4",
-    "react-drag-and-drop": "3.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
